[package]
name = "markdown-gem"
version = "0.1.0"
edition = "2021"
authors = ["Timur Khamrakulov <timur@murabi.io>"]
license = "GPL-3.0"
description = "Markdown code chunk runner and renderer"
readme = "README.md"
homepage = "https://github.com/murabi-io/markdown-gem"
repository = "https://github.com/murabi-io/markdown-gem"
keywords = ["cli", "markdown", "code-chunk", "executor", "runner"]
categories = ["command-line-utilities"]
build = "build.rs"

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
termimad = "0.20.3"
crossterm = "0.23"
regex = "1.6.0"
lazy_static = "1.4.0"
uuid = { version = "1.1.2", features = ["v4", "serde", "fast-rng"] }
anyhow = "1.0.65"
exitcode = "1.1.2"
crokey="0.4"
log = "0.4.0"
env_logger = "0.10.0"
log4rs="1.2.0"
crossbeam="0.8.2"
toml="0.5.9"

[dependencies.hocon]
version = "0.9.0"
default-features = false
features = ["serde-support"]

[dependencies.tokio]
version = "1.17.0"
default-features = false
features = ["net", "sync", "process", "rt", "macros", "io-util"]

[dependencies.clap]
version = "4.0.26"
features = ["derive"]

[target.'cfg(linux)'.dependencies]
sys-info = "0.9.1"

[build-dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.26", features = ["derive"] }
clap_complete = "4.0.5"
clap_mangen = "0.2.4"